fixed randomly FAQ cut off issue

--- a/assets/new-register-faq.css
+++ b/assets/new-register-faq.css
@@ -22,7 +22,6 @@
 .register-faq-content {
     padding-top: 15px;
     padding-left: 5px;
-    max-width: 760px;
 }
 .register-faq-content p,
 .register-faq-content * {
